# cybersecurity-smartenergy

./: .dockerignore  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  EVENT_CONTRACT.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  req.txt  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: components.yaml  mapping.yaml  policies.yaml  rules.yaml  scenarios.yaml
data/events/: example_events.csv  example_events.jsonl
docs/: EXPERIMENTS.md  test_cases.md
docs/examples/: README.md  events_sample.csv  incidents_sample.csv  report.txt  results.csv
docs/integration/: Integration_Readiness_Pack.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/cards/: ActionSummaryCard.tsx  ComponentStatusCard.tsx  PolicyKpiCard.tsx  index.ts
frontend/src/components/charts/: ActionsPerMinuteChart.tsx  AvailabilityChart.tsx  DowntimeChart.tsx  IncidentsPerMinuteChart.tsx  index.ts
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/components/tables/: ActionTable.tsx  IncidentTable.tsx  index.ts
frontend/src/hooks/: useApi.ts
frontend/src/pages/: Dashboard.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
scripts/: test_db_cycle.sh  test_full_cycle.sh  test_network_cycle.sh
services/db_writer/: Dockerfile  app.py
services/network_sim/: Dockerfile  app.py
services/postgres/: init.sql
src/adapters/: __init__.py  file_adapter.py
src/analyzer/: __init__.py  __main__.py  cli.py  correlator.py  decision.py  detector.py  metrics.py  pipeline.py  policy_engine.py  reporter.py  state_store.py
src/api/: __init__.py  __main__.py  data_provider.py  main.py  models.py
src/api/routes/: actions.py  incidents.py  metrics.py  state.py
src/contracts/: __init__.py  action.py  alert.py  enums.py  event.py  incident.py  integration_contract_v1.py  interfaces.py
src/dashboard/: __init__.py  app.py  data_access.py
src/dashboard/styles/: theme.css
src/dashboard/ui/: __init__.py  cards.py  charts.py  layout.py  state.py  tables.py
src/emulator/: __init__.py  __main__.py  cli.py  devices.py  engine.py  hybrid.py  noise.py  world.py
src/emulator/scenarios/: __init__.py  base.py  brute_force.py  ddos_abuse.py  network_failure.py  outage.py  telemetry_spoof.py  unauthorized_cmd.py
src/normalizer/: __init__.py  __main__.py  cli.py  filters.py  parser.py  pipeline.py
src/shared/: config_loader.py  file_utils.py  logger.py  reliability.py  seed.py  severity.py  time_utils.py
tests/: conftest.py  test_actions_loop.py  test_adapter_certification.py  test_analyzer_pipeline_helpers.py  test_api_endpoints.py  test_cli_and_reporter.py  test_closed_loop.py  test_contracts.py  test_correlator.py  test_db_restore.py  test_detector.py  test_emulator.py  test_emulator_engine_helpers.py  test_file_adapter_interfaces.py  test_file_adapter_resilience.py  test_filters.py  test_hybrid_and_interfaces.py  test_integration.py  test_integration_contract_v1.py  test_integration_modes.py  test_jsonl_live.py  test_metrics.py  test_noise_and_scenarios.py  test_normalizer.py  test_normalizer_pipeline.py  test_parser.py  test_policy_engine.py  test_reliability.py  test_shared_utils_extra.py  test_smoke_ci.py  test_state_store.py
wiki/: Event-Contract.md  Home.md  Metrics.md  Policies.md  Running.md
