[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartenergy-cyber"
version = "0.1.0"
description = "SmartEnergy Cyber-Resilience Analyzer — master's thesis prototype"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
analyzer = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "jinja2>=3.1",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
smartenergy-emulator = "src.emulator.cli:main"
smartenergy-analyzer = "src.analyzer.cli:main"
smartenergy-normalizer = "src.normalizer.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line-length
    "SIM108", # ternary
    "RUF012", # mutable class default
    "B008",   # default arg in argparse
    "UP007",  # X | Y union syntax
    "UP017",  # datetime.UTC alias (ламає сумісність)
    "RUF001", # ambiguous unicode in string (intentional: ×, →, etc.)
    "RUF002", # ambiguous unicode in docstring
    "B905",   # zip-without-strict (Python 3.11 compat)
    "B007",   # unused loop variable
    "UP042",  # replace-str-enum
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "slow: marks tests that need the full emulator run (deselect with -m 'not slow')",
    "external: tests that require external services or system binaries",
    "component_adapters: tests for adapters layer",
    "component_analyzer: tests for analyzer layer",
    "component_api: tests for API layer",
    "component_contracts: tests for contracts and schemas",
    "component_db: tests for database integration",
    "component_emulator: tests for emulator layer",
    "component_normalizer: tests for normalizer layer",
    "component_pipeline: tests for multi-step pipelines",
    "component_shared: tests for shared utilities",
    "type_api: API endpoint and API behavior tests",
    "type_cli: CLI argument and entrypoint tests",
    "type_contract: interface and data contract tests",
    "type_integration: integration tests across multiple modules",
    "type_resilience: robustness tests for failures and malformed input",
    "type_smoke: fast smoke checks for CI",
    "type_unit: focused unit tests",
    "priority_p0: highest priority smoke/regression checks",
    "priority_p1: high priority integration and contract checks",
    "priority_p2: regular unit and support checks",
    "priority_p3: low priority and external-environment checks",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
